# static-serialize

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  main.cpp  serialize.cppm
